Fix auto scaling to work with correct wraps

--- a/src/fitting/fitting.scss
+++ b/src/fitting/fitting.scss
@@ -14,6 +14,6 @@ svg[data-marp-fitting='svg'].__reflow__ {
   white-space: nowrap;
 }
 
-[data-marp-fitting-svg-content='pre'] {
+[data-marp-fitting-svg-content-wrap] {
   white-space: pre;
 }
