--- a/themes/gaia.scss
+++ b/themes/gaia.scss
@@ -121,7 +121,7 @@ code {
 pre {
   display: block;
   margin: 1em 0 0 0;
-  min-height: 2em;
+  min-height: 1em;
   overflow: auto;
 
   code {
